<resources>

    <string name="app_name">Audio Profile</string>
    <string name="audio_profile_title">Set audio profile</string>
    <string name="cannot_get_system_service">Cannot get system service, exiting!</string>
    <string name="close">Close</string>
    <string name="config_profile_name">Profile name:</string>
    <string name="configure">Configure</string>
    <string name="copyright">&#169; %1s RJW - All rights reserved</string>
    <string name="current_location">My current location is Lat: %1$f, Long: %2$f</string>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <string name="ok">OK</string>
    <string name="permission_grant">Grant permission</string>
    <string name="permission_instructions_battery">In order to be able to modify the audio profile of the device on a network change, the application requires to be excluded
        from battery optimisations.
        \nPlease press the button to grant the permission and then press Back to return to the application and press the OK button.</string>
    <string name="permission_instructions_dnd">In order to be able to modify the audio profile of the device, the application requires the do not disturb permission.
        \nPlease press the button to grant the permission and then press Back to return to the application and press the OK button.</string>
    <string name="permission_instructions_permissions">To work properly, the application needs to be able to send notifications.
        \nPlease press the button and grant the permission and then press Back to return to the application and press the OK button.</string>
    <string name="permission_instructions_sleep">To work properly, the application needs to be added to the list of never sleeping applications.
        \nPlease press the button and follow the instructions below and then press Back to return to the application and press the OK button.</string>
    <string name="permission_instructions_sleep_instructions">&#8226; Press Background usage limits.
        \n&#8226; Press Never sleeping apps.
        \n&#8226; Press the plus button.
        \n&#8226; Select the application and press Add.</string>
    <array name="profile">
        <item>Silent</item>
        <item>Quiet</item>
        <item>Normal</item>
        <item>Loud</item>
    </array>
    <string name="unchanged">Do not change</string>
    <string name="unknown_location">My location is unknown at the moment</string>
    <string name="vibrate">Vibrate</string>

    <string name="about_built">Built:</string>
    <string name="about_title">About</string>
    <string name="about_version">Version</string>

    <string name="config_title">Profile Configuration</string>
    <string name="config_volume_notification">Notification volume</string>
    <string name="config_volume_media">Media volume</string>
    <string name="config_volume_ringtone">Ringtone volume</string>
    <string name="config_volume_system">System volume</string>

    <string name="notification_profile">Current profile: %s</string>
    <string name="notification_service">Audio Profile is active</string>

    <string name="settings_lock_profile">Lock profile</string>
    <string name="settings_title">Settings</string>
    <string name="settings_wifi_enter">Enter Wifi Network</string>
    <string name="settings_wifi_exit">Exit Wifi Network</string>

</resources>