<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/content_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Auto"
                android:layout_weight="2"
                android:text="@string/settings_wifi_enter"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkboxEnterWifiDefault"
                    style="@style/CheckBox"
                    android:text="@string/unchanged"
                    android:onClick="onClickUnchanged"/>

                <Spinner
                    android:id="@+id/spinnerEnterWifi"
                    style="@style/Spinner.Full"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Auto"
                android:layout_weight="2"
                android:text="@string/settings_wifi_exit"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkboxExitWifiDefault"
                    style="@style/CheckBox"
                    android:text="@string/unchanged"
                    android:onClick="onClickUnchanged"/>

                <Spinner
                    android:id="@+id/spinnerExitWifi"
                    style="@style/Spinner.Full"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/Button"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/settings_app_colour"
            android:onClick="onClickAppColour"/>

    </LinearLayout>

    <Button
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_table"
        android:text="@string/close"
        android:onClick="onClickClose"/>

</LinearLayout>